@startuml
UserApplicationService x--> User: 値を利用する
UserApplicationService x--> UserRepository: ユーザ取得、及びユーザを削除
UserRepository .> User: 値の依存

class User {
  - userName: UserName
  - userID: UserID
}
class UserApplicationService {
  - userRepository: UserRepository
  + Delete(user User) error
}
interface UserRepository {
  FindByID(id UserID) (*User, error)
  Delete(user User) error
}
@enduml
